# background-tasks-rust

./: Cargo.toml  Dockerfile  ea_desktop_session.Dockerfile
.github/workflows/: ea_desktop_session.yml  main.yml
.sqlx/: query-8f32db8df9d68cffeac95da85d8d40ef90cd4adcf610735f8b452fc77fd811c1.json
src/: check_ea_desktop_session.rs  ea_desktop_session.rs  influx_db.rs  main.rs  mongo.rs
src/.github/workflows/: main.yml
src/connectors/: clickhouse_db.rs  influx_db.rs  mod.rs  mongo.rs  quest_db.rs  timescale_db.rs
src/gatherer/: battlebit.rs  battlefield_grpc.rs  battlefield_grpc_bf2042.rs  battlefield_grpc_bf6.rs  battlelog.rs  companion.rs  gateway_players.rs  marne.rs  mod.rs  old_games.rs  server_manager.rs
src/structs/: battlebit.rs  battlelog.rs  companion.rs  game_players.rs  marne.rs  mod.rs  old_games.rs  results.rs  server_info.rs
