[package]
name = "background-tasks-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
mongodb = "2.3.1"
futures = "0.3.17"
chrono = "0.4.22"
num-traits = "0.2"
serde_json = "1.0.87"
log = "0.4"
flexi_logger = "0.24.1"

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.warp]
version = "0.3.1"
features = ["tls"]

[dependencies.bson]
version = "2.4.0"
features = ["chrono-0_4"]

[dependencies.tokio]
version = "1.7"
features = ["full"]

[dependencies.bf_sparta]
git = "https://github.com/Community-network/sparta-rust"
branch = "main"

[dependencies.grpc-rust]
git = "https://github.com/community-network/grpc-rust"
branch = "main"

[dependencies.reqwest]
version = "0.11.12"
default-features = false
features = ["rustls-tls", "json"]