[package]
name = "background-tasks-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
mongodb = "2.4"
futures = "0.3"
chrono = "0.4"
influxdb2 = "0.3"
influxdb2-structmap = "0.2"
num-traits = "0.2"
serde_json = "1.0"
log = "0.4"
flexi_logger = "0.25"
serde_derive = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.warp]
version = "0.3"
features = ["tls"]

[dependencies.bson]
version = "2.5"
features = ["chrono-0_4"]

[dependencies.tokio]
version = "1.26"
features = ["full"]

[dependencies.bf_sparta]
git = "https://github.com/Community-network/sparta-rust"
branch = "main"

[dependencies.grpc-rust]
git = "https://github.com/community-network/grpc-rust"
branch = "main"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json"]